--- a/CamMD/CamMD.ui
+++ b/CamMD/CamMD.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1059</width>
-    <height>619</height>
+    <height>615</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -54,7 +54,7 @@
      <pixmap>logo.png</pixmap>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="camera_box">
     <property name="geometry">
      <rect>
       <x>40</x>
@@ -113,7 +113,7 @@ border-radius: 50px;
      <string>SEVERITY:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="output_disease">
     <property name="geometry">
      <rect>
       <x>590</x>
@@ -264,7 +264,7 @@ border-radius: 17px;
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="severity_2">
+   <widget class="QLabel" name="severity_message">
     <property name="geometry">
      <rect>
       <x>610</x>
@@ -293,14 +293,14 @@ border-radius: 17px;
    <zorder>label_7</zorder>
    <zorder>header_rectangle</zorder>
    <zorder>label</zorder>
-   <zorder>label_2</zorder>
+   <zorder>camera_box</zorder>
    <zorder>line</zorder>
    <zorder>severity</zorder>
-   <zorder>label_5</zorder>
+   <zorder>output_disease</zorder>
    <zorder>treat</zorder>
    <zorder>search</zorder>
    <zorder>scan_again</zorder>
-   <zorder>severity_2</zorder>
+   <zorder>severity_message</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
